--- a/app/src/main/res/layout/activity_settings_detail.xml
+++ b/app/src/main/res/layout/activity_settings_detail.xml
@@ -60,22 +60,26 @@
                 app:layout_constraintTop_toBottomOf="@+id/settings_detail_card" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.cardview.widget.CardView
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/settings_detail_button_ack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:cardBackgroundColor="@color/gray_2"
-            app:cardCornerRadius="24dp"
+            android:background="@drawable/bg_round_24"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageButton
-                android:id="@+id/settings_detail_button_back"
+                android:id="@+id/settings_detail_button_back_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@color/transparent"
                 android:padding="12dp"
-                android:src="@drawable/baseline_arrow_back_24" />
-        </androidx.cardview.widget.CardView>
+                android:src="@drawable/baseline_arrow_back_24"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
