--- a/app/src/main/res/layout/fragment_settings_appearance_main.xml
+++ b/app/src/main/res/layout/fragment_settings_appearance_main.xml
@@ -42,6 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="12dp"
+        android:paddingBottom="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tabLayout">
@@ -76,11 +77,31 @@
             android:id="@+id/settings_appearance_main_text_opacity_seekbar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="12dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/settings_appearance_main_text_opacity_title" />
+
+        <TextView
+            android:id="@+id/settings_appearance_main_text_opacity_desc_min"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginLeft="12dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/settings_appearance_main_text_opacity_seekbar" />
+
+        <TextView
+            android:id="@+id/settings_appearance_main_text_opacity_desc_max"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="12dp"
+            android:layout_marginRight="12dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/settings_appearance_main_text_opacity_seekbar" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -88,6 +109,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="12dp"
+        android:paddingBottom="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -123,10 +145,30 @@
             android:id="@+id/settings_appearance_main_bg_opacity_seekbar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="12dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/settings_appearance_main_bg_opacity_title" />
+
+        <TextView
+            android:id="@+id/settings_appearance_main_bg_opacity_desc_min"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginLeft="12dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/settings_appearance_main_bg_opacity_seekbar" />
+
+        <TextView
+            android:id="@+id/settings_appearance_main_bg_opacity_desc_max"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="12dp"
+            android:layout_marginRight="12dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/settings_appearance_main_bg_opacity_seekbar" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
