--- a/app/src/main/res/layout/fragment_settings_timeout_main.xml
+++ b/app/src/main/res/layout/fragment_settings_timeout_main.xml
@@ -2,11 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/settings_timeout_main_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <com.google.android.material.tabs.TabLayout
+        android:id="@+id/settings_timeout_main_tab_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/transparent"
@@ -14,94 +16,108 @@
         app:tabTextColor="@color/white">
 
         <com.google.android.material.tabs.TabItem
+            android:id="@+id/settings_timeout_main_tab_hide_buttons"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hide buttons" />
 
         <com.google.android.material.tabs.TabItem
+            android:id="@+id/settings_timeout_main_tab_go_ambient"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Go ambient" />
 
         <com.google.android.material.tabs.TabItem
+            android:id="@+id/settings_timeout_main_switch_background"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Refresh Background" />
+            android:text="Switch Background" />
     </com.google.android.material.tabs.TabLayout>
 
     <ScrollView
+        android:id="@+id/settings_timeout_main_scroll_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:id="@+id/settings_timeout_main_scroll_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="vertical">
+            android:orientation="vertical" >
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
+                android:id="@+id/settings_timeout_main_picker_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-                <NumberPicker
-                    android:id="@+id/numberPicker000"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/settings_timeout_main_picker_content"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginBottom="12dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/textView00"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="h"
-                    app:layout_constraintBottom_toBottomOf="@+id/numberPicker000"
-                    app:layout_constraintEnd_toStartOf="@+id/numberPicker111"
-                    app:layout_constraintStart_toEndOf="@+id/numberPicker000"
-                    app:layout_constraintTop_toTopOf="@+id/numberPicker000" />
-
-                <NumberPicker
-                    android:id="@+id/numberPicker111"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/textView11"
-                    app:layout_constraintStart_toEndOf="@+id/textView00"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/textView11"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="m"
-                    app:layout_constraintBottom_toBottomOf="@+id/numberPicker111"
-                    app:layout_constraintEnd_toStartOf="@+id/numberPicker222"
-                    app:layout_constraintStart_toEndOf="@+id/numberPicker111"
-                    app:layout_constraintTop_toTopOf="@+id/numberPicker111" />
-
-                <NumberPicker
-                    android:id="@+id/numberPicker222"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/textView22"
-                    app:layout_constraintStart_toEndOf="@+id/textView11"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/textView22"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="s"
-                    app:layout_constraintBottom_toBottomOf="@+id/numberPicker222"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/numberPicker222"
-                    app:layout_constraintTop_toTopOf="@+id/numberPicker222" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
+                    <NumberPicker
+                        android:id="@+id/settings_timeout_main_picker_hour"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/settings_timeout_main_text_hour"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="h"
+                        app:layout_constraintBottom_toBottomOf="@+id/settings_timeout_main_picker_hour"
+                        app:layout_constraintEnd_toStartOf="@+id/settings_timeout_main_picker_minute"
+                        app:layout_constraintStart_toEndOf="@+id/settings_timeout_main_picker_hour"
+                        app:layout_constraintTop_toTopOf="@+id/settings_timeout_main_picker_hour" />
+
+                    <NumberPicker
+                        android:id="@+id/settings_timeout_main_picker_minute"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/settings_timeout_main_text_minute"
+                        app:layout_constraintStart_toEndOf="@+id/settings_timeout_main_text_hour"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/settings_timeout_main_text_minute"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="m"
+                        app:layout_constraintBottom_toBottomOf="@+id/settings_timeout_main_picker_minute"
+                        app:layout_constraintEnd_toStartOf="@+id/settings_timeout_main_picker_second"
+                        app:layout_constraintStart_toEndOf="@+id/settings_timeout_main_picker_minute"
+                        app:layout_constraintTop_toTopOf="@+id/settings_timeout_main_picker_minute" />
+
+                    <NumberPicker
+                        android:id="@+id/settings_timeout_main_picker_second"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/settings_timeout_main_text_second"
+                        app:layout_constraintStart_toEndOf="@+id/settings_timeout_main_text_minute"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/settings_timeout_main_text_second"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="s"
+                        app:layout_constraintBottom_toBottomOf="@+id/settings_timeout_main_picker_second"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/settings_timeout_main_picker_second"
+                        app:layout_constraintTop_toTopOf="@+id/settings_timeout_main_picker_second" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
     </ScrollView>
